# bootcamp_python

./: .flake8  .pre-commit-config.yaml  banco_desafio.db  meubanco.db  pyproject.toml  test.db
src/aula1/: exemplo_01.py  exemplo_02.py  kpi.py
src/aula15/: minha_api.py  teste.py
src/aula17/: aprendendo_sqlalchemy.py  desafio_professor.py  desafio_sqlalchemy.py  select.py  teste.py
src/aula19/: database.py  main.py  model.py  schema.py
src/aula2/: calc-simples.py  classificador.py  conversor_temp.py  desafio.py  exercicio1.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio17.py  exercicio2.py  exercicio3.py  exercicio4.py  exercicio5.py  exercicio6.py  exercicio7.py  exercicio8.py  exercicio9.py  palindromo.py  tipo_validacao.py
src/aula3/: desafio.py  exercicio1.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio2.py  exercicio3.py  exercicio4.py  exercicio5.py  exercicio6.py  exercicio7.py  exercicio8.py  exercicio9.py
src/aula4/: cadastro.json  desafio.py  funcao_exe16.py  funcao_exe17.py  funcao_exe18.py  funcao_exe19.py  funcao_exe20.py  list_dict_exe1.py  list_dict_exe10.py  list_dict_exe11.py  list_dict_exe12.py  list_dict_exe13.py  list_dict_exe14.py  list_dict_exe15.py  list_dict_exe2.py  list_dict_exe3.py  list_dict_exe4.py  list_dict_exe5.py  list_dict_exe6.py  list_dict_exe7.py  list_dict_exe8.py  list_dict_exe9.py
src/aula7/: celsius_to_fahrenheit_list.py  contar_valores_unicos_lista.py  desafio.py  desvio_padrao_lista.py  (+3 more)
(+16 files in other folders)
