[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Douglas Poso <douglas.poso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.0"
bandit = "^1.7.8"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
